log
Thu 28 Mar 2024 02:12:54 PM UTC: 
 tests:  0|6
total_score: 0/70
b57bf21
Thu 28 Mar 2024 02:15:55 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
db9ba75
Thu 28 Mar 2024 02:21:56 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/70
6a2d5d5
Thu 28 Mar 2024 02:22:09 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
97a5e8f
Thu 28 Mar 2024 02:30:38 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ddc42b1
Thu 28 Mar 2024 02:33:51 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5448487
Thu 28 Mar 2024 02:34:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c1634e6
Thu 28 Mar 2024 02:35:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:12: error: variable ‘nodo’ set but not used [-Werror=unused-but-set-variable]
   44 |     Node * nodo = createNode(list);
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
74c289a
Thu 28 Mar 2024 02:35:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f06f082
Thu 28 Mar 2024 02:35:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2f765d9
Thu 28 Mar 2024 02:36:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
74a0ba6
Thu 28 Mar 2024 02:37:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
47f34b5
Thu 28 Mar 2024 02:38:57 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a2672f1
Thu 28 Mar 2024 02:41:14 PM UTC: 
 list.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  2|5
total_score: 15/70
5b6406a
Thu 28 Mar 2024 02:44:15 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘nextList’:
list.c:52:17: error: ‘nodo’ is used uninitialized [-Werror=uninitialized]
   52 |   Node * nodo = createNode(nodo);
      |                 ^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1aa6b67
Thu 28 Mar 2024 02:45:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9dc8733
Thu 28 Mar 2024 02:48:11 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a7c8bf3
Thu 28 Mar 2024 02:49:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
aaa9ed7
Thu 28 Mar 2024 02:50:05 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
799c92d
Thu 28 Mar 2024 02:50:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
53fb925
Thu 28 Mar 2024 02:51:51 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
   57 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c3797ac
Thu 28 Mar 2024 02:52:26 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
caa478e
Thu 28 Mar 2024 02:52:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
477d8fd
Thu 28 Mar 2024 02:54:33 PM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:52:10: error: unused variable ‘nodo’ [-Werror=unused-variable]
   52 |   Node * nodo = createNode(list);
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
02c97e9
Thu 28 Mar 2024 02:54:41 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
b782d35
Thu 28 Mar 2024 02:59:26 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
93ea7aa
Thu 28 Mar 2024 03:00:25 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
d149656
Thu 28 Mar 2024 03:00:37 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  5|4
total_score: 25/70
e6aa007
Thu 28 Mar 2024 03:01:13 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  6|4
total_score: 25/70
2f32417
Thu 28 Mar 2024 03:04:18 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
557ab59
Sat 30 Mar 2024 02:05:40 AM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  9|3
total_score: 35/70
b80835e
Sat 30 Mar 2024 03:25:29 PM UTC: 
 list.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
1f86ca2
Sat 30 Mar 2024 03:26:01 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
f6e1dc2
Sat 30 Mar 2024 03:26:34 PM UTC: 
 list.c | 9 ++-------
 1 file changed, 2 insertions(+), 7 deletions(-)
 tests:  0|0
e1af76c
Sat 30 Mar 2024 03:27:13 PM UTC: 
 list.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  10|2
total_score: 45/70
b0a20b5
Sat 30 Mar 2024 03:31:05 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 45/70
4d88e88
Sat 30 Mar 2024 03:32:43 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
616f0a6
Sat 30 Mar 2024 03:33:26 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
172c33a
Sat 30 Mar 2024 03:33:57 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
7da63ba
Sat 30 Mar 2024 03:34:25 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
e98173e
Sat 30 Mar 2024 03:35:02 PM UTC: 
 list.c | 24 +++++++++++++++++++-----
 1 file changed, 19 insertions(+), 5 deletions(-)
 tests:  11|1
total_score: 55/70
e783cb0
Sat 30 Mar 2024 03:35:43 PM UTC: 
 list.c | 12 +++---------
 1 file changed, 3 insertions(+), 9 deletions(-)
 tests:  11|1
total_score: 55/70
49113f4
Sat 30 Mar 2024 03:35:54 PM UTC: 
 list.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  11|1
total_score: 55/70
b9f777f
Sat 30 Mar 2024 03:36:05 PM UTC: 
 list.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  11|1
total_score: 55/70
f759273
Sat 30 Mar 2024 03:36:17 PM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  10|2
total_score: 45/70
c792a3f
Sat 30 Mar 2024 03:36:46 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
3518681
Sat 30 Mar 2024 03:36:50 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
03ddd63
Sat 30 Mar 2024 03:37:36 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|1
total_score: 55/70
24cc618
Sat 30 Mar 2024 03:38:49 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:126:11: error: unused variable ‘data’ [-Werror=unused-variable]
  126 |     void *data = list->current->data;
      |           ^~~~
cc1: all warnings being treated as errors
Compilation failed
deb7407
Sat 30 Mar 2024 03:43:14 PM UTC: 
 list.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  11|1
total_score: 55/70
e7081cc
Sat 30 Mar 2024 03:45:32 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
045a82d
Sat 30 Mar 2024 03:46:22 PM UTC: 
 list.c | 26 +++++++++++++++++++++-----
 1 file changed, 21 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:148:1: error: control reaches end of non-void function [-Werror=return-type]
  148 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
dd0be4f
Sat 30 Mar 2024 03:46:34 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
cede0e6
Sat 30 Mar 2024 03:47:03 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
3c9ab54
Sat 30 Mar 2024 03:47:25 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:147:11: error: unused variable ‘data’ [-Werror=unused-variable]
  147 |     void *data = nodeToRemove->data;
      |           ^~~~
list.c:152:1: error: control reaches end of non-void function [-Werror=return-type]
  152 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c6d125d
Sat 30 Mar 2024 03:47:32 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  12|0
total_score: 70/70
262ce01
Sat 30 Mar 2024 03:48:04 PM UTC: 
 list.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  0|0
930808a
Sat 30 Mar 2024 03:48:20 PM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|0
6faedd4
Sat 30 Mar 2024 03:48:28 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  12|0
total_score: 70/70
c1152f0
Sat 30 Mar 2024 03:48:57 PM UTC: 
 list.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
fd12607
Sat 30 Mar 2024 03:50:50 PM UTC: 
 list.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
 tests:  12|0
total_score: 70/70
dce5806
